# ai-platform

./: .gitignore  .gitmodules  LICENSE  README.md  add.sh  git.sh  infer.md  platform.code-workspace
ascend-projects/: README.md
content/ParallelReductionsBenchmark/: reduce_opencl.cl
content/cuda-application-design-and-development/Chapter01/: seqBig.cu  seqRuntime.cu
content/cuda-application-design-and-development/Chapter02/xorLM/: xorLM.cu
content/cuda-application-design-and-development/Chapter03/pca/: pcaNM.cu
content/cuda-application-design-and-development/Chapter04/: arithmeticILP.cu
content/cuda_by_example/: CMakeLists.txt
content/cuda_by_example/appendix_a/: dot.cu  hashtable_gpu.cu
content/cuda_by_example/chapter03/: hello_world.cu  set_gpu.cu  simple_device_call.cu  simple_kernel.cu  simple_kernel_params.cu
content/cuda_by_example/chapter04/: CMakeLists.txt  add_loop_cpu.cu
content/cuda_by_example/chapter05/: CMakeLists.txt  add_loop_blocks.cu  add_loop_long_blocks.cu  dot.cu
content/cuda_by_example/chapter06/: ray.cu
content/cuda_by_example/chapter07/: heat.cu  heat_2d.cu
content/cuda_by_example/chapter09/: CMakeLists.txt  hist_gpu_shmem_atomics.cu
content/cuda_by_example/chapter10/: CMakeLists.txt  copy_timed.cu
content/cuda_by_example/common/: CMakeLists.txt
content/cudahandbook/histogram/: histogramNPP.cuh
content/cudahandbook/streaming/: saxpyGPU.cuh
content/kubernetes/helm/: charts.md
content/mk-cuda-examples/Chapter01/: seqBig.cu  seqSerial.cpp
content/mk-cuda-examples/Chapter03/nlpca/: nlpcaNM.cu
content/pmpp/: CMakeLists.txt
content/pmpp/chapter_02/: CMakeLists.txt
content/pmpp/chapter_03/: CMakeLists.txt
content/pmpp/chapter_07/: CMakeLists.txt
content/pmpp/chapter_09/: CMakeLists.txt
content/pmpp/src/chapter_02/: CMakeLists.txt  ch2__config.h
content/pmpp/src/chapter_04/: CMakeLists.txt  ch4__config.h
content/pmpp/src/chapter_05/: ch5__config.h
content/pmpp/src/chapter_08/: CMakeLists.txt
content/pmpp/src/chapter_12/: CMakeLists.txt
content/ray-experimental/: Untitled.ipynb  train-MNIST.ipynb
content/ray-experimental/lightning_logs/version_0/: events.out.tfevents.1686838680.mds-hp.947465.0
content/tcp/: close_wait.md
mds-projects/ParallelReductionsBenchmark/deprecated/OpenCL/: DataParallel.cl
mds-projects/cuda-application-design-and-development/: CMakeLists.txt
mds-projects/cuda-application-design-and-development/Chapter01/: badRuntime.cu  seqAsync.cu  seqCuda.cu
mds-projects/cuda_by_example/appendix_a/: CMakeLists.txt  dot.cu  hashtable_cpu.cu
mds-projects/cuda_by_example/chapter03/: CMakeLists.txt  enum_gpu.cu  hello_world.cu  simple_kernel.cu
mds-projects/cuda_by_example/chapter04/: add_loop_gpu.cu  add_loop_long.cu  julia_cpu.cu  julia_gpu.cu
mds-projects/cuda_by_example/chapter05/: ripple.cu  shared_bitmap.cu
mds-projects/cuda_by_example/chapter06/: CMakeLists.txt  ray_noconst.cu
mds-projects/cuda_by_example/chapter07/: CMakeLists.txt
mds-projects/cuda_by_example/chapter08/: CMakeLists.txt  heat.cu  ripple.cu
mds-projects/cuda_by_example/chapter09/: hist_cpu.cu  hist_gpu_gmem_atomics.cu
mds-projects/cuda_by_example/chapter10/: basic_double_stream.cu  basic_double_stream_correct.cu  basic_single_stream.cu
mds-projects/cuda_by_example/common/: book.h
mds-projects/cudahandbook/chLib/: chCommandLine.h
mds-projects/cudahandbook/streaming/: stream2Async.cu
mds-projects/eda-samples/: ydata-profiling.ipynb
mds-projects/modelscope-projects/: gpt_models.ipynb
mds-projects/pmpp/: CMakeLists.txt
mds-projects/pmpp/src/chapter_02/: ch2__vec_add.cu
mds-projects/pmpp/src/chapter_03/: CMakeLists.txt  ch3__blur.cu  ch3__config.h
mds-projects/pmpp/src/chapter_04/: ch4__matrix_mul.cu
mds-projects/pmpp/src/chapter_05/: CMakeLists.txt
mds-projects/pmpp/src/chapter_10/: CMakeLists.txt
mds-projects/pmpp/src/chapter_11/: CMakeLists.txt
mds-projects/ray-experimental/: nvidia-te-1.ipynb  torch-lighting.ipynb  train-get-started.ipynb
mds-projects/tensorrt-cookbook/: Dockerfile  start.sh
mds-projects/yi01/: config.json  generation_config.json  model.safetensors.index.json  modeling_yi.py  pytorch_model.bin.index.json  tokenizer_config.json
resources/: .python-version
resources/kubeflow-projects/components/crud-web-apps/tensorboards/: Dockerfile  Dockerfile.dockerignore  README.md
resources/kubeflow-projects/components/crud-web-apps/tensorboards/frontend/: .prettierrc
resources/kubeflow-projects/components/tensorboard-controller/: README.md
resources/openvino/: .python-version  jupyterlab
